Bug 202376 - backout of checkin for 155941.  png_set_filler doesn't do what I expected and caused problems on macos.